--- a/homework-5/css/styles.css
+++ b/homework-5/css/styles.css
@@ -349,7 +349,11 @@ header {
 .team_img {
   width: 380px;
   height: 470px;
+  transition: 0.3s linear all;
   /* border: 1px solid crimson; */
+}
+
+.team_img:hover {
 }
 
 .developer_name {
@@ -369,6 +373,18 @@ header {
   color: rgb(153, 153, 153);
   line-height: 1.6;
   text-align: center;
+}
+
+.img-container {
+  /* height: 100%; */
+  /* width: 100%; */
+  /* overflow: hidden; */
+  /* object-fit: cover; */
+}
+
+.img-container:hover {
+  top: -10px;
+  left: -10px;
 }
 
 .meet_our_team_block-display .img-container {
@@ -529,7 +545,7 @@ header {
   line-height: 1.2;
 }
 
-.p_span {
+.p_a {
   color: #f38181;
 }
 
