--- a/homework-6/css/styles.css
+++ b/homework-6/css/styles.css
@@ -171,7 +171,26 @@ header {
 .service_item-1 {
 }
 
+.service_item-1::before {
+  content: "";
+  display: block;
+  border-style: solid;
+  border-width: 3px;
+  border-color: rgb(254, 209, 54);
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+
+  width: 72px;
+  height: 71px;
+}
+
 .service_item-1__img1 {
+  position: relative;
+}
+
+.service_item-1__img2 {
+  /* position: absolute; */
 }
 
 .service_item-2 {
@@ -180,8 +199,39 @@ header {
 .service_item-2__img1 {
 }
 
+.service_item-2__img2 {
+}
+
 .service_item-3 {
 }
 
 .service_item-3__img1 {
 }
+
+.service_item-3__img2 {
+}
+
+/* footer */
+.footer {
+  background-image: url(/homework-6/img/footer/Background.png);
+  height: 677px;
+}
+.Map_Image {
+  /* background-image: url("Map Image.png"); */
+  opacity: 0.302;
+  position: absolute;
+  width: 614px;
+  height: 537px;
+  /* padding-right: 0; */
+  /* margin-left: 0; */
+  /* margin-right: 0; */
+  /* margin: 0 auto; */
+}
+/* .Map_Image {
+  background-image: url("Map Image.png");
+  opacity: 0.302;
+  position: absolute;
+  width: 614px;
+  height: 537px;
+  z-index: 4;
+} */
