--- a/homework-6/css/styles.css
+++ b/homework-6/css/styles.css
@@ -13,7 +13,7 @@ body {
   border: 1px solid crimson;
 }
 
-/* header */
+/* =====================header===================== */
 header {
   padding-top: 20px;
   height: 65px;
@@ -63,41 +63,11 @@ header {
   margin-right: 40px;
 }
 
-/* 
-.Services {
-  font-size: 14px;
-  font-family: "Montserrat";
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
-  line-height: 2.929;
-  text-align: center;
-  position: absolute;
-  left: 774.133px;
-  top: 39.497px;
-  z-index: 49;
-}
-
-
-.Home {
-    font-size: 14px;
-    font-family: "Montserrat";
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    line-height: 2.929;
-    text-align: center;
-    position: absolute;
-    left: 688.937px;
-    top: 39.497px;
-    z-index: 50;
-}
-
-*/
-
 .menu-item_link:hover {
   color: #ffcc00;
 }
 
-/* main */
+/* =====================main===================== */
 .main {
   margin-top: 110px;
 }
@@ -106,8 +76,10 @@ header {
   padding-top: 7px;
 }
 
-.services___signature {
+.services_____signature {
   display: block;
+  /* margin-top: 13px; */
+  margin-bottom: 12px;
 }
 
 .services {
@@ -118,120 +90,184 @@ header {
   text-transform: uppercase;
   text-align: center;
 }
-/* .Title_Services {
-  font-family: "Montserrat";
-  font-weight: bold;
-  text-transform: uppercase;
-  line-height: 1.875;
-  
-}
-*/
 
 .signature_services {
   font-size: 16px;
   font-family: "Averia Serif Libre", cursive;
   color: rgb(119, 119, 119);
   text-align: center;
-  margin-top: 15px;
+  margin-top: 5px;
 }
-
-/* .Sub_Title {
-  font-family: "DroidSerif";
-  font-style: italic;
-  line-height: 1.2;
-  
-}
- */
 
 .services_items {
   display: flex;
-  /* flex-basis: 33.33%; */
+  flex-wrap: wrap;
+  flex-basis: 33.33%;
 }
 
-.block {
-  width: 280px;
-  height: 205px;
+.services_item {
+  width: 33.33%;
+  max-width: 308px;
+  min-width: 280px;
+  padding-top: 65px;
+  padding-right: 18px;
+  padding-left: 18px;
+  margin-bottom: 100px;
+  border: 1px solid red;
 }
 
 .service-img {
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 74px;
+  height: 74px;
+  border-width: 3px;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: rgb(254, 209, 54);
+  background-color: rgb(255, 255, 255);
 }
 
-/* .Icon_Basket {
-  background-color: rgb(254, 209, 54);
-  position: absolute;
-  left: 350px;
-  top: 352px;
-  width: 40px;
-  height: 39px;
-  z-index: 39;
+.service-item_title {
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(34, 34, 34);
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.services___description {
+  font-size: 14px;
+  font-family: "Roboto Slab", serif;
+  color: rgb(119, 119, 119);
+  text-align: center;
+}
+
+/* 
+.Title___Marketing_Tools {
+  font-size: 18px;
+  font-family: "Montserrat";
+  color: rgb(34, 34, 34);
+  font-weight: bold;
+  text-align: left;
 }
  */
 
-.service_item-1 {
+/* 
+ .Description {
+  font-size: 14px;
+  font-family: "RobotoSlab";
+  color: rgb(119, 119, 119);
+  line-height: 1.2;
+  text-align: center;
 }
+ */
 
-.service_item-1::before {
-  content: "";
-  display: block;
-  border-style: solid;
-  border-width: 3px;
-  border-color: rgb(254, 209, 54);
-  border-radius: 50%;
-  background-color: rgb(255, 255, 255);
-  position: absolute;
-
-  width: 72px;
-  height: 71px;
-}
-
-.service_item-1__img1 {
-  position: relative;
-}
-
-.service_item-1__img2 {
-  /* position: absolute; */
-}
-
-.service_item-2 {
-}
-
-.service_item-2__img1 {
-}
-
-.service_item-2__img2 {
-}
-
-.service_item-3 {
-}
-
-.service_item-3__img1 {
-}
-
-.service_item-3__img2 {
-}
-
-/* footer */
+/* =====================footer===================== */
 .footer {
-  background-image: url(/homework-6/img/footer/Background.png);
+  background-image: url(../img/footer/Map\ Image.png);
+  background-position: right bottom;
+  min-height: 677px;
+  background-color: rgb(34, 34, 34);
+  background-repeat: no-repeat;
+}
+
+/* 
+.Background {
+  background-color: rgb(34, 34, 34);
+  position: absolute;
+  width: 1402px;
   height: 677px;
 }
+
 .Map_Image {
-  /* background-image: url("Map Image.png"); */
-  opacity: 0.302;
-  position: absolute;
-  width: 614px;
-  height: 537px;
-  /* padding-right: 0; */
-  /* margin-left: 0; */
-  /* margin-right: 0; */
-  /* margin: 0 auto; */
-}
-/* .Map_Image {
   background-image: url("Map Image.png");
   opacity: 0.302;
   position: absolute;
-  width: 614px;
-  height: 537px;
-  z-index: 4;
-} */
+}
+
+*/
+
+.contact_us {
+  display: block;
+  width: 290px;
+  height: 120px;
+  margin-top: 60px;
+  align-items: baseline;
+  border: 1px solid crimson;
+}
+
+.title-contact_us {
+  font-size: 38px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.discription_of_contact_us {
+  font-size: 14px;
+  font-family: "Hammersmith One", sans-serif;
+  color: rgb(119, 119, 119);
+  text-align: center;
+  font-weight: normal;
+  margin-top: 13px;
+}
+
+.form_div {
+  display: flex;
+  width: 940px;
+  height: 450px;
+  border: 1px solid crimson;
+}
+
+.form {
+  display: inline;
+  border: 1px solid crimson;
+}
+
+._3_inputs {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+  border: 1px solid crimson;
+}
+
+.__3_inputs {
+  display: block;
+  width: 455px;
+  height: 80px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+}
+
+.input {
+  width: 455px;
+  height: 50px;
+}
+
+.div_response {
+  width: 455px;
+  height: 240px;
+  border: 1px solid crimson;
+}
+
+.response {
+  width: 455px;
+  height: 210px;
+}
+
+.btn_sent_form {
+}
+
+.submit {
+}
