--- a/homework-6/css/styles.css
+++ b/homework-6/css/styles.css
@@ -211,6 +211,15 @@ header {
   margin-top: 40px;
 }
 
+/* .Title_Contact_Us {
+  font-size: 40px;
+  font-family: "Montserrat";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+ */
+
 .discription_of_contact_us {
   font-size: 14px;
   font-family: "Hammersmith One", sans-serif;
@@ -223,7 +232,7 @@ header {
 .form_div {
   display: flex;
   width: 940px;
-  height: 450px;
+  height: 310px;
   border: 1px solid crimson;
 }
 
@@ -242,13 +251,13 @@ header {
 }
 
 .input {
-  width: 455px;
+  width: 100%;
   height: 50px;
 }
 
 .div_response {
   width: 455px;
-  height: 240px;
+  height: 210px;
   border: 1px solid crimson;
 }
 
