--- a/homework-5/css/styles.css
+++ b/homework-5/css/styles.css
@@ -270,8 +270,6 @@ header {
   height: 550px;
 }
 
-/* 1200/545 */
-
 .img-block__img_z {
   cursor: pointer;
   margin-left: 0;
@@ -326,7 +324,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-color: rgba(85, 85, 85, 0.502); */
+
   background-image: -moz-linear-gradient(
     90deg,
     rgb(252, 227, 138, 0.902) 0%,
@@ -349,7 +347,7 @@ header {
 .team_img {
   width: 380px;
   height: 470px;
-  /* border: 1px solid crimson; */
+  border: 1px solid crimson;
 }
 
 .team_img:hover {
@@ -375,30 +373,21 @@ header {
 }
 
 .img-container {
-  /* height: 100%; */
-  /* width: 100%; */
-  /* overflow: hidden; */
-  /* object-fit: cover; */
   transition: 0.3s linear all;
 }
 
 .img-container:hover {
-  /* top: -10px; */
-  /* left: -10px; */
   transform: translateX(-10px) translateY(-10px);
 }
 
 .meet_our_team_block-display .img-container {
   position: relative;
-  /* width: auto; */
   max-height: 470px;
   overflow: hidden;
   margin-bottom: 30px;
   top: 0;
   left: 0;
 }
-/* .meet_our_team_block-display .img-container:hover {
-} */
 
 .meet_our_team_block-display .img-container > img {
   height: 100%;
@@ -421,8 +410,6 @@ header {
   display: flex;
   background-color: rgb(252, 227, 138);
   position: relative;
-  /* left: 428px; */
-  /* top: 1177px; */
   width: 56px;
   height: 56px;
   transition: 0.2s linear all;
@@ -440,13 +427,10 @@ header {
   align-items: center;
   width: 28px;
   height: 28px;
-  /* color: rgb(252, 227, 138); */
   margin: auto;
 }
 
 .facebook {
-  /* left: 451px;
-  top: 1192px; */
   width: 13px;
   height: 26px;
 }
