--- a/homework-6/css/styles.css
+++ b/homework-6/css/styles.css
@@ -5,25 +5,24 @@
 }
 
 body {
+  width: auto;
 }
 
 .container {
   width: auto;
   max-width: 940px;
-  border: 1px solid crimson;
+  /* border: 1px solid crimson; */
 }
 
 /* =====================header===================== */
 header {
   padding-top: 20px;
   height: 65px;
-  border: 1px solid cornflowerblue;
+  /* border: 1px solid cornflowerblue; */
 }
 
 .navigation {
   display: flex;
-  /* justify-content: space-between;
-  text-align: center; */
 }
 
 .logo-box {
@@ -78,7 +77,6 @@ header {
 
 .services_____signature {
   display: block;
-  /* margin-top: 13px; */
   margin-bottom: 12px;
 }
 
@@ -112,8 +110,8 @@ header {
   padding-top: 65px;
   padding-right: 18px;
   padding-left: 18px;
-  margin-bottom: 100px;
-  border: 1px solid red;
+  margin-bottom: 120px;
+  /* border: 1px solid red; */
 }
 
 .service-img {
@@ -147,26 +145,6 @@ header {
   text-align: center;
 }
 
-/* 
-.Title___Marketing_Tools {
-  font-size: 18px;
-  font-family: "Montserrat";
-  color: rgb(34, 34, 34);
-  font-weight: bold;
-  text-align: left;
-}
- */
-
-/* 
- .Description {
-  font-size: 14px;
-  font-family: "RobotoSlab";
-  color: rgb(119, 119, 119);
-  line-height: 1.2;
-  text-align: center;
-}
- */
-
 /* =====================footer===================== */
 .footer {
   background-image: url(../img/footer/Map\ Image.png);
@@ -174,31 +152,15 @@ header {
   min-height: 677px;
   background-color: rgb(34, 34, 34);
   background-repeat: no-repeat;
+  /* border: 1px solid crimson; */
 }
-
-/* 
-.Background {
-  background-color: rgb(34, 34, 34);
-  position: absolute;
-  width: 1402px;
-  height: 677px;
-}
-
-.Map_Image {
-  background-image: url("Map Image.png");
-  opacity: 0.302;
-  position: absolute;
-}
-
-*/
 
 .contact_us {
-  display: block;
   width: 290px;
   height: 120px;
-  margin-top: 60px;
-  align-items: baseline;
-  border: 1px solid crimson;
+  padding-top: 100px;
+  margin-bottom: 132px;
+  /* border: 1px solid crimson; */
 }
 
 .title-contact_us {
@@ -208,17 +170,7 @@ header {
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
-  margin-top: 40px;
 }
-
-/* .Title_Contact_Us {
-  font-size: 40px;
-  font-family: "Montserrat";
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  text-transform: uppercase;
-}
- */
 
 .discription_of_contact_us {
   font-size: 14px;
@@ -231,43 +183,73 @@ header {
 
 .form_div {
   display: flex;
+  justify-content: space-between;
   width: 940px;
-  height: 310px;
-  border: 1px solid crimson;
+  /* margin-top: 72px; */
+  /* border: 1px solid crimson; */
 }
 
-.form:not(:last-child) {
+.form {
+}
+
+._3_inputs_and_textarea {
   display: flex;
-  border: 1px solid crimson;
 }
 
 ._3_inputs {
-  display: flex;
-  /* flex-wrap: wrap; */
   flex-direction: column;
-  /* justify-content: left; */
-  /* align-items: baseline; */
-  border: 1px solid crimson;
 }
 
 .input {
-  width: 100%;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(187, 187, 187);
+  font-weight: bold;
+  text-transform: uppercase;
+
+  border-radius: 2px;
+  border-width: 1px;
+  border-style: solid;
+  width: 455px;
   height: 50px;
 }
 
-.div_response {
-  width: 455px;
-  height: 210px;
-  border: 1px solid crimson;
+.input_1:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.textarea {
 }
 
 .responsive {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(187, 187, 187);
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: left;
+  border-radius: 5px;
+  border-width: 1px;
+  border-style: solid;
   width: 455px;
   height: 210px;
 }
 
-.btn_sent_form {
+.btn-send {
+  margin-top: 24px;
+  margin-right: 0;
+  text-align: center;
 }
 
-.submit {
+.btn_send_message {
+  font-size: 18px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(255, 255, 255);
+  background-color: rgb(254, 209, 54);
+  text-transform: uppercase;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 3px;
+  width: 240px;
+  height: 66px;
 }
