--- a/homework-6/css/styles.css
+++ b/homework-6/css/styles.css
@@ -248,6 +248,7 @@ header {
   background-color: rgb(254, 209, 54);
   text-transform: uppercase;
   font-weight: bold;
+  cursor: pointer;
   text-align: center;
   border-radius: 3px;
   width: 240px;
