--- a/homework-7/css/styles.css
+++ b/homework-7/css/styles.css
@@ -126,7 +126,7 @@ body {
 }
 /* ----------------------------------------------------main---------------------------------------------------- */
 .main {
-  margin-top: 65px;
+  margin-top: 63px;
 }
 .title_main_description {
   font-size: 22px;
@@ -143,32 +143,45 @@ body {
   width: 220px;
   height: 235px;
 }
-.block_with_2_person__1 {
+/* .block_with_2_person__1 {
   display: flex;
   margin-left: 0;
-}
+} */
 .Bradley_Hunter {
   text-align: center;
+  margin-left: 0;
   border: 1px solid coral;
+}
+.img_bradley_hunter {
+  position: relative;
 }
 .Heather_Walker {
-  margin-left: 20px;
+  margin-left: 9px;
   text-align: center;
   border: 1px solid coral;
 }
-
-.block_with_2_persons__2 {
+.img_heather_walker {
+  position: relative;
+}
+/* .block_with_2_persons__2 {
   display: flex;
   margin-right: 0;
-}
+} */
 .Lucas_Marsha {
-  margin-right: 20px;
+  margin-right: 9px;
   text-align: center;
   border: 1px solid coral;
+}
+.img_lucas_marsha {
+  position: relative;
 }
 .Bradley_Hunter_girl {
   text-align: center;
+  margin-right: 0;
   border: 1px solid coral;
+}
+.img_bradley_hunter_girl {
+  position: relative;
 }
 .name_person {
   font-size: 14px;
@@ -184,55 +197,45 @@ body {
   margin-top: 14px;
 }
 .person_s__ {
+  display: flex;
   border-color: rgb(255, 255, 255);
+  background-repeat: no-repeat;
+  background-size: 38px 38px;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
   width: 38px;
   height: 38px;
 }
 .hobby_this_person {
 }
 .hobby1 {
-  display: flex;
   background-image: url(../img/main/icons/Ellipse_1.png);
-  background-repeat: no-repeat;
-  background-size: 38px 38px;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  left: 354px;
-  top: 907px;
+  /* left: 354px; */
+  /* top: 907px; */
+  top: 86px;
+  right: 45px;
 }
 .hobby2 {
-  display: flex;
   background-image: url(../img/main/icons/Ellipse_2.png);
-  background-repeat: no-repeat;
-  background-size: 38px 38px;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  left: 594px;
-  top: 907px;
+  /* left: 594px; */
+  /* top: 907px; */
+  top: 86px;
+  right: 45px;
 }
 .hobby3 {
-  display: flex;
   background-image: url(../img/main/icons/Ellipse_3.png);
-  background-repeat: no-repeat;
-  background-size: 38px 38px;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  left: 833px;
-  top: 907px;
+  /* left: 833px; */
+  /* top: 907px; */
+  top: 86px;
+  right: 45px;
 }
 .hobby4 {
-  display: flex;
   background-image: url(../img/main/icons/Ellipse_4.png);
-  background-repeat: no-repeat;
-  background-size: 38px 38px;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  left: 1072px;
-  top: 907px;
+  /* left: 1072px; */
+  /* top: 907px; */
+  top: 86px;
+  right: 45px;
 }
 /* ----------------------------------------------------footer---------------------------------------------------- */
 .footer {
@@ -259,3 +262,191 @@ body {
 }
 /* 
  */
+/* ----------------------------------------------------media---------------------------------------------------- */
+/* ----------------------------------------------------tablet---------------------------------------------------- */
+@media screen and (min-width: 480px) and (max-width: 940px) {
+  .header {
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.1),
+        rgba(255, 255, 255, 0.1)
+      ),
+      url("../img/header/background/Vector-Smart_Object_tablet.png");
+  }
+  .container {
+    max-width: 748px;
+  }
+  .logo-box {
+    margin-left: 37px;
+  }
+  .menu {
+    margin-right: 38px;
+  }
+  .the_persons {
+    flex-wrap: wrap;
+    padding: 0 128px 0;
+  }
+  .person {
+    width: 236px;
+  }
+  .Bradley_Hunter,
+  .Lucas_Marsha {
+    /* margin-right: 10px; */
+    margin-left: 0;
+  }
+  .Heather_Walker,
+  .Bradley_Hunter_girl {
+    /* margin-left: 10px; */
+    margin-right: 0;
+  }
+  .Lucas_Marsha,
+  .Bradley_Hunter_girl {
+    margin-top: 25px;
+  }
+  .hobby1,
+  .hobby2,
+  .hobby3,
+  .hobby4 {
+    top: 86px;
+    right: 53px;
+  }
+  .footer {
+    padding-bottom: 38px;
+  }
+}
+/* ----------------------------------------------------mobile---------------------------------------------------- */
+@media screen and (min-width: 320px) and (max-width: 748px) {
+  .header {
+    /* background-image: linear-gradient(
+        rgba(0, 0, 0, 0.1),
+        rgba(255, 255, 255, 0.1)
+      ),
+      url("../img/header/background/Vector_Smart_Object_mobile.png"); */
+    padding-top: 35px;
+  }
+  .container {
+    max-width: 280px;
+  }
+  .navigation {
+    display: inline-block;
+  }
+  .logo-box {
+    text-align: center;
+    margin-top: 100px;
+  }
+  .Share_your_holiday_dreams {
+    font-size: 28px;
+  }
+  .And_find_the_perfect_partner_to_fullfill_it {
+    font-size: 18px;
+  }
+  /*
+font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-decoration: none;
+
+
+
+  .Sign_up {
+  font-size: 14px;
+  font-family: "Montserrat";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  -moz-transform: matrix( 0.99899373141512,0,0,1,0,0);
+  -webkit-transform: matrix( 0.99899373141512,0,0,1,0,0);
+  -ms-transform: matrix( 0.99899373141512,0,0,1,0,0);
+  position: absolute;
+  left: 168.413px;
+  top: 29.382px;
+  z-index: 15;
+}
+
+  //////////////////
+  
+  .Share_your_holiday_dreams {
+  ont-size: 52px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  
+  
+  font-family: "Montserrat";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 1.2;
+  text-align: center;
+  -moz-transform: matrix( 1.00087739777983,0,0,0.99950991603228,0,0);
+  -webkit-transform: matrix( 1.00087739777983,0,0,0.99950991603228,0,0);
+  -ms-transform: matrix( 1.00087739777983,0,0,0.99950991603228,0,0);
+  position: absolute;
+  left: 46.48px;
+  top: 222.868px;
+  z-index: 9;
+
+////////////////////////////
+font-size: 24px;
+  font-family: "Roboto", sans-serif;
+  color: rgb(255, 255, 255);
+  margin-top: 21px;
+
+
+
+  .And_find_the_perfect_partner_to_fullfill_it {
+  font-family: "Roboto";
+  color: rgb(255, 255, 255);
+  line-height: 1.2;
+  text-align: center;
+  -moz-transform: matrix( 1.00087739777983,0,0,0.99950991603228,0,0);
+  -webkit-transform: matrix( 1.00087739777983,0,0,0.99950991603228,0,0);
+  -ms-transform: matrix( 1.00087739777983,0,0,0.99950991603228,0,0);
+  position: absolute;
+  left: 53.593px;
+  top: 303.821px;
+  z-index: 10;
+}
+/////////////////
+font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  background-color: rgb(255, 78, 80);
+  border-color: rgb(255, 78, 80);
+  border-style: solid;
+  cursor: pointer;
+  border-radius: 30px;
+  width: 225px;
+  height: 40px;
+
+
+
+
+.Find_your_holiday_partner {
+  font-size: 14px;
+  font-family: "Montserrat";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 1.2;
+  text-align: center;
+  -moz-transform: matrix( 0.99990526765849,0,0,1.0002913936836,0,0);
+  -webkit-transform: matrix( 0.99990526765849,0,0,1.0002913936836,0,0);
+  -ms-transform: matrix( 0.99990526765849,0,0,1.0002913936836,0,0);
+  position: absolute;
+  left: 85.466px;
+  top: 373.397px;
+  z-index: 8;
+}
+
+}
+ */
+  .btn-header {
+    width: 280px;
+  }
+  .btn-footer {
+    width: 280px;
+  }
+}
